moonlight-rewrite/test/fixtures/CompileFail/CheckedRewriteConstructor.hs
module CheckedRewriteConstructor where

import Moonlight.Rewrite.System (CheckedRewrite (..))

constructorEscapes CheckedRewrite {} = ()
